Fixed the layout problem by translating coordinates up by the smallest x/y value.

--- a/perikaryon-view/src/App.css
+++ b/perikaryon-view/src/App.css
@@ -24,9 +24,6 @@ div.blu {
 .App-link {
   color: #61dafb;
 }
-#reactgrid{
-  margin-top:300px
-}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
